syntax = "proto3";

package echo;

option java_package = "echo";
option java_outer_classname = "Echo";

// Echo request message.
message EchoRequest {
  string message = 1;
}

// Echo response message.
message EchoResponse {
  string reply = 1;
  uint64 timestamp = 2;
}

// Echo service definition.
service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}
